vlib/v/checker/tests/invalid_char_err.out
vlib/v/checker/tests/invalid_char_err.vv:1:1: error: invalid character `ğŸˆ`
    1 | ğŸˆprintln('')
      | ^